@@ -11,6 +11,22 @@ repositories {
     mavenCentral()
 }
 
+sourceSets {
+    jmh {
+        java.srcDirs = ['src/jmh/java']
+        resources.srcDirs = ['src/jmh/resources']
+        compileClasspath += sourceSets.main.runtimeClasspath
+    }
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '--add-modules' << 'jdk.incubator.vector'
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs('--add-modules', 'jdk.incubator.vector')
+}
+
 dependencies {
     // AWS
     implementation platform('software.amazon.awssdk:bom:2.17.46')
@@ -21,9 +37,13 @@ dependencies {
     testImplementation(platform('org.junit:junit-bom:5.8.1'))
     testImplementation('org.junit.jupiter:junit-jupiter')
     testImplementation('org.mockito:mockito-core:3.5.10')
+    // JMH
+    jmhImplementation 'org.openjdk.jmh:jmh-core:1.33'
+    jmhAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.33'
 }
 
 test {
+    jvmArgs('--add-modules', 'jdk.incubator.vector')
     useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed"
@@ -42,3 +62,10 @@ jacoco {
 checkstyle {
     toolVersion '9.0'
 }
+
+task jmh(type: JavaExec, dependsOn: jmhClasses) {
+    mainClass = 'org.openjdk.jmh.Main'
+    classpath = sourceSets.jmh.compileClasspath + sourceSets.jmh.runtimeClasspath
+}
+
+classes.finalizedBy(jmhClasses)
